--- a/arch/arm/boot/dts/exynos4412-odroid-common.dtsi
+++ b/arch/arm/boot/dts/exynos4412-odroid-common.dtsi
@@ -100,10 +100,9 @@
 		reset-gpios = <&gpk1 2 1>;
 	};
 
-	mmc@12550000 {
+	emmc: mmc@12550000 {
 		pinctrl-0 = <&sd4_clk &sd4_cmd &sd4_bus4 &sd4_bus8>;
 		pinctrl-names = "default";
-		vmmc-supply = <&buck8_reg>;
 		vqmmc-supply = <&ldo20_reg>;
 		mmc-pwrseq = <&emmc_pwrseq>;
 		status = "okay";
