--- a/arch/arm/boot/dts/exynos4412-odroid-common.dtsi
+++ b/arch/arm/boot/dts/exynos4412-odroid-common.dtsi
@@ -55,6 +55,34 @@
 		};
 	};
 
+	regulators {
+		compatible = "simple-bus";
+		#address-cells = <1>;
+		#size-cells = <0>;
+
+		reg_sysvdd: regulator@0 {
+			compatible = "regulator-fixed";
+			reg = <0x0>;
+			regulator-name = "sysvdd";
+			regulator-min-microvolt = <5000000>;
+			regulator-max-microvolt = <5000000>;
+			regulator-always-on;
+			regulator-boot-on;
+		};
+
+		reg_p3v3: regulator@1 {
+			compatible = "regulator-fixed";
+			reg = <0x1>;
+			regulator-name = "p3v3";
+			regulator-min-microvolt = <3300000>;
+			regulator-max-microvolt = <3300000>;
+			gpio = <&gpa1 1 3>;
+			enable-active-high;
+			regulator-always-on;
+			regulator-boot-on;
+		};
+	};
+
 	i2s0: i2s@03830000 {
 		pinctrl-0 = <&i2s0_bus>;
 		pinctrl-names = "default";
@@ -231,6 +259,7 @@
 					regulator-min-microvolt = <1000000>;
 					regulator-max-microvolt = <1000000>;
 					regulator-always-on;
+					LDO1-supply = <&buck6_reg>;
 				};
 
 				ldo2_reg: ldo@2 {
@@ -249,6 +278,7 @@
 					regulator-min-microvolt = <1800000>;
 					regulator-max-microvolt = <1800000>;
 					regulator-always-on;
+					LDO3-supply = <&buck7_reg>;
 				};
 
 				/* Supply for IO of SDHC. */
@@ -258,6 +288,7 @@
 					regulator-min-microvolt = <2800000>;
 					regulator-max-microvolt = <2800000>;
 					regulator-boot-on;
+					LDO4-supply = <&reg_sysvdd>;
 				};
 
 				/* The LDO5 regulator provides reference voltage for the whole MMC *
@@ -269,6 +300,7 @@
 					regulator-max-microvolt = <1800000>;
 					regulator-always-on;
 					regulator-boot-on;
+					LDO5-supply = <&buck7_reg>;
 				};
 
 				ldo6_reg: ldo@6 {
@@ -277,6 +309,7 @@
 					regulator-min-microvolt = <1000000>;
 					regulator-max-microvolt = <1000000>;
 					regulator-always-on;
+					LDO6-supply = <&buck6_reg>;
 				};
 
 				ldo7_reg: ldo@7 {
@@ -285,6 +318,7 @@
 					regulator-min-microvolt = <1000000>;
 					regulator-max-microvolt = <1000000>;
 					regulator-always-on;
+					LDO7-supply = <&buck6_reg>;
 				};
 
 				ldo8_reg: ldo@8 {
@@ -292,6 +326,7 @@
 					regulator-name = "vdd_hdmi_1.0V";
 					regulator-min-microvolt = <1000000>;
 					regulator-max-microvolt = <1000000>;
+					LDO8-supply = <&buck6_reg>;
 				};
 
 				ldo9_reg: ldo@9 {
@@ -300,6 +335,7 @@
 					regulator-min-microvolt = <1000000>;
 					regulator-max-microvolt = <1000000>;
 					regulator-always-on;
+					LDO9-supply = <&buck7_reg>;
 				};
 
 				/* This regulator also supplies the TMU block. */
@@ -308,6 +344,7 @@
 					regulator-name = "vddq_mipihsi_1.8V";
 					regulator-min-microvolt = <1800000>;
 					regulator-max-microvolt = <1800000>;
+					LDO10-supply = <&buck7_reg>;
 				};
 
 				ldo11_reg: ldo@11 {
@@ -316,6 +353,7 @@
 					regulator-min-microvolt = <1800000>;
 					regulator-max-microvolt = <1800000>;
 					regulator-always-on;
+					LDO11-supply = <&buck7_reg>;
 				};
 
 				ldo12_reg: ldo@12 {
@@ -325,6 +363,7 @@
 					regulator-max-microvolt = <3300000>;
 					regulator-always-on;
 					regulator-boot-on;
+					LDO12-supply = <&reg_sysvdd>;
 				};
 
 				ldo13_reg: ldo@13 {
@@ -334,6 +373,7 @@
 					regulator-max-microvolt = <1800000>;
 					regulator-always-on;
 					regulator-boot-on;
+					LDO13-supply = <&buck7_reg>;
 				};
 
 				ldo14_reg: ldo@14 {
@@ -343,6 +383,7 @@
 					regulator-max-microvolt = <1800000>;
 					regulator-always-on;
 					regulator-boot-on;
+					LDO14-supply = <&buck7_reg>;
 				};
 
 				ldo15_reg: ldo@15 {
@@ -352,6 +393,7 @@
 					regulator-max-microvolt = <1000000>;
 					regulator-always-on;
 					regulator-boot-on;
+					LDO15-supply = <&buck6_reg>;
 				};
 
 				ldo16_reg: ldo@16 {
@@ -361,6 +403,7 @@
 					regulator-max-microvolt = <1800000>;
 					regulator-always-on;
 					regulator-boot-on;
+					LDO16-supply = <&buck7_reg>;
 				};
 
 				ldo17_reg: ldo@17 {
@@ -368,6 +411,7 @@
 					regulator-name = "vddq_cam_1.8V";
 					regulator-min-microvolt = <1800000>;
 					regulator-max-microvolt = <1800000>;
+					LDO17-supply = <&buck7_reg>;
 				};
 
 				ldo18_reg: ldo@18 {
@@ -376,6 +420,7 @@
 					regulator-min-microvolt = <1800000>;
 					regulator-max-microvolt = <1800000>;
 					regulator-always-on;
+					LDO18-supply = <&buck7_reg>;
 				};
 
 				ldo19_reg: ldo@19 {
@@ -383,6 +428,7 @@
 					regulator-name = "vt_cam_1.8V";
 					regulator-min-microvolt = <1800000>;
 					regulator-max-microvolt = <1800000>;
+					LDO19-supply = <&buck7_reg>;
 				};
 
 				/* Supply for IO of eMMC. */
@@ -392,6 +438,7 @@
 					regulator-min-microvolt = <1800000>;
 					regulator-max-microvolt = <3000000>;
 					regulator-boot-on;
+					LDO20-supply = <&buck7_reg>;
 				};
 
 				/* Supply for core of SDHC. */
@@ -401,6 +448,7 @@
 					regulator-min-microvolt = <2800000>;
 					regulator-max-microvolt = <2800000>;
 					regulator-boot-on;
+					LDO21-supply = <&reg_sysvdd>;
 				};
 
 				ldo23_reg: ldo@23 {
@@ -408,6 +456,7 @@
 					regulator-name = "vdd_touch_2.8V";
 					regulator-min-microvolt = <2800000>;
 					regulator-max-microvolt = <2800000>;
+					LDO23-supply = <&reg_sysvdd>;
 				};
 
 				ldo24_reg: ldo@24 {
@@ -415,6 +464,7 @@
 					regulator-name = "vdd_touchled_3.3V";
 					regulator-min-microvolt = <3300000>;
 					regulator-max-microvolt = <3300000>;
+					LDO24-supply = <&reg_sysvdd>;
 				};
 
 				ldo25_reg: ldo@25 {
@@ -424,6 +474,7 @@
 					regulator-max-microvolt = <1800000>;
 					regulator-always-on;
 					regulator-boot-on;
+					LDO25-supply = <&reg_sysvdd>;
 				};
 
 				ldo26_reg: ldo@26 {
@@ -440,6 +491,7 @@
 					regulator-max-microvolt = <1100000>;
 					regulator-always-on;
 					regulator-boot-on;
+					BUCK1-supply = <&reg_sysvdd>;
 				};
 
 				buck2_reg: buck@2 {
@@ -449,6 +501,7 @@
 					regulator-max-microvolt = <1400000>;
 					regulator-always-on;
 					regulator-boot-on;
+					BUCK2-supply = <&reg_sysvdd>;
 				};
 
 				buck3_reg: buck@3 {
@@ -458,6 +511,7 @@
 					regulator-max-microvolt = <1125000>;
 					regulator-always-on;
 					regulator-boot-on;
+					BUCK3-supply = <&reg_sysvdd>;
 				};
 
 				buck4_reg: buck@4 {
@@ -466,6 +520,7 @@
 					regulator-min-microvolt = <850000>;
 					regulator-max-microvolt = <1200000>;
 					regulator-microvolt-offset = <50000>;
+					BUCK4-supply = <&reg_sysvdd>;
 				};
 
 				/* This regulator also supplies:            *
@@ -477,6 +532,7 @@
 					regulator-max-microvolt = <1200000>;
 					regulator-always-on;
 					regulator-boot-on;
+					BUCK5-supply = <&reg_sysvdd>;
 				};
 
 				/* Input to LDO: 1, 6, 7, 8 and 15 */
@@ -487,6 +543,7 @@
 					regulator-max-microvolt = <1350000>;
 					regulator-always-on;
 					regulator-boot-on;
+					BUCK6-supply = <&reg_sysvdd>;
 				};
 
 				/* Input to LDO: 3, 5, 9, 11 and 17~20 */
@@ -496,6 +553,7 @@
 					regulator-min-microvolt = <2000000>;
 					regulator-max-microvolt = <2000000>;
 					regulator-always-on;
+					BUCK7-supply = <&reg_sysvdd>;
 				};
 
 				buck9_reg: buck@9 {
@@ -504,6 +562,7 @@
 					regulator-min-microvolt = <1200000>;
 					regulator-max-microvolt = <1200000>;
 					regulator-always-on;
+					BUCK9-supply = <&reg_sysvdd>;
 				};
 			};
 		};
