--- a/arch/arm/boot/dts/exynos4412-odroid-common.dtsi
+++ b/arch/arm/boot/dts/exynos4412-odroid-common.dtsi
@@ -167,6 +167,10 @@
 
 	g2d@10800000 {
 		status = "okay";
+
+		/* Clock the engine with 400MHz. */
+		assigned-clocks = <&clock CLK_SCLK_FIMG2D>;
+		assigned-clock-rates = <440000000>;
 	};
 
 	camera {
